--- a/run_lora.ipynb
+++ b/run_lora.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        " 'attention_mask': [1, 1, 1, 1, 1, 1]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -817,48 +817,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "===================================BUG REPORT===================================\n",
-      "Welcome to bitsandbytes. For bug reports, please run\n",
-      "\n",
-      "python -m bitsandbytes\n",
-      "\n",
-      " and submit this information together with your error trace to: https://github.com/TimDettmers/bitsandbytes/issues\n",
-      "================================================================================\n",
-      "bin /home/fujie/.conda/envs/py39/lib/python3.9/site-packages/bitsandbytes/libbitsandbytes_cuda118_nocublaslt.so\n",
-      "CUDA SETUP: CUDA runtime path found: /usr/local/cuda-11/lib64/libcudart.so\n",
-      "CUDA SETUP: Highest compute capability among GPUs detected: 6.1\n",
-      "CUDA SETUP: Detected CUDA version 118\n",
-      "CUDA SETUP: Loading binary /home/fujie/.conda/envs/py39/lib/python3.9/site-packages/bitsandbytes/libbitsandbytes_cuda118_nocublaslt.so...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/fujie/.conda/envs/py39/lib/python3.9/site-packages/bitsandbytes/cuda_setup/main.py:149: UserWarning: /home/fujie/.conda/envs/py39 did not contain ['libcudart.so', 'libcudart.so.11.0', 'libcudart.so.12.0'] as expected! Searching further paths...\n",
-      "  warn(msg)\n",
-      "/home/fujie/.conda/envs/py39/lib/python3.9/site-packages/bitsandbytes/cuda_setup/main.py:149: UserWarning: WARNING: Compute capability < 7.5 detected! Only slow 8-bit matmul is supported for your GPU!\n",
-      "  warn(msg)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -911,7 +872,7 @@
        ")"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1017,24 +978,24 @@
      "output_type": "stream",
      "text": [
       "---- PROMPT ----\n",
-      "ウルトラブックとは一体何なのか？パソコン市場は縮小するのか【デジ通】\n",
-      "2011年の6月にそのコンセプトが発表されたUltrabook(ウルトラブック)だが、2011年末から2012年初頭にかけて、Ultrabook第1弾と呼べる製品が多数登場し、市場でも一定の人気を得ているようだ。\n",
-      "今後も新製品が多数予定されているが、Ultrabookの本命は2013年にインテルから登場する新プロセッサHaswell(コード名)を採用する製品と言われており、それまでにどう成長していくか注目される。\n",
+      "ヴァンパイアから最愛の恋人を守れるのか、『フライトナイト』のポスターが公開\n",
+      "　2012年1月7日より公開となる映画『フライトナイト／恐怖の夜』のポスターが公開された。\n",
+      "　本作は、カルト的なファンの中で“伝説の映画”として語り継がれてきた映画『フライナイト』（1986年）を、新たなキャストとスタッフ、新たな構想で最新鋭の3D映像として蘇らせた作品。\n",
       "\n",
       "\n",
       "### Label:\n",
       "\n",
       "---- RESPONSE ----\n",
       "\n",
-      "ITライフ!業界ニュース\n",
+      "MOVIE ENTER\n",
       "---- TARGET ----\n",
-      "ITライフハック\n"
+      "MOVIE ENTER\n"
      ]
     }
    ],
    "source": [
     "# d = val_data[33]\n",
-    "d = data_all[1700]\n",
+    "d = data_all[3200]\n",
     "\n",
     "response, prompt, decoded = generate(d['text'])\n",
     "print(\"---- PROMPT ----\")\n",
