--- a/kitazawa/demo_lora.ipynb
+++ b/kitazawa/demo_lora.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        ")"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "10"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
       "### Response:\n",
       "\n",
       "---- RESPONSE ----\n",
-      "栃木県は県庁所在地の宇都宮市で、県北部日光にある世界遺産の日光の観光地や、保養地である那須があるよ。\n",
+      "栃木県は県庁所在地の宇都宮市がある県だよ。観光地として日光や、那須があるよ。\n",
       "---- TARGET ----\n",
       "栃木県は、日本の関東地方に位置する県で県庁所在地は宇都宮市だよ。\n",
       "県北部に日光国立公園があり、観光地・保養地の日光や那須が知られてるよ。\n"
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -293,37 +293,37 @@
       "text/plain": [
        "[{'text': '長崎県（ながさきけん）は、日本の九州地方に位置する県。県庁所在地は長崎市。\\n五島列島、壱岐島、対馬など数多くの島嶼を含み、47都道府県中最も島が多いことで知られる。また、多島であるうえにリアス式海岸を多く擁することから海岸線の長さは47都道府県中第2位となっている（※「地形」節にて詳説）',\n",
        "  'target': '長崎県は、日本の九州地方に位置する県で県庁所在地は長崎市だよ。\\n五島列島、壱岐島、対馬など数多くの島嶼を含めて、47都道府県中最も島が多いことで知られていて、また、多島であるうえにリアス式海岸を多く擁することから海岸線の長さは47都道府県中第2位となっているんだ。',\n",
-       "  'predicted': '長崎県は九州にある県で、県庁所在地は長崎市で、島嶼が47都道県中一番多いよ。そして、海に囲まれているから海岸線は47都県の中で一番長く、また多島のうえにリアス海岸をたくさん擁するから海岸線の長さは47番目に長いんだ。'},\n",
+       "  'predicted': '長崎県は九州にある県で、県庁所在地は長崎市で、島嶼が多く、46都道府県で1番多いんだ。それから、多くの島を持っているから、海やリアス海岸が多くあって、海岸線は47都道府中2番目の長さがあるんだよ。'},\n",
        " {'text': 'カリブの海賊は、ウォルト・ディズニー自身が設計に携わった最後のアトラクションであり、ウォルトの死から3ヶ月後にディズニーランドで初めて公開された。',\n",
        "  'target': 'カリブの海賊は、ウォルト・ディズニーが最後に設計したアトラクションで、亡くなってから３か月後にディズニーランドで初公開されたよ。',\n",
-       "  'predicted': 'パイレーツ・オブ・カリビアンは、ディズニーが初めて作ったアトラクションで、ディズニーの死後から3週間後に公開されたんだ。'},\n",
+       "  'predicted': '海賊はウォルトが設計し、ディズニーランドで最初に公開されたアトラクションだよ。'},\n",
        " {'text': '栃木県（とちぎけん）は、日本の関東地方に位置する県。県庁所在地は宇都宮市。\\n県北部に日光国立公園があり、観光地・保養地の日光や那須が知られる',\n",
        "  'target': '栃木県は、日本の関東地方に位置する県で県庁所在地は宇都宮市だよ。\\n県北部に日光国立公園があり、観光地・保養地の日光や那須が知られてるよ。',\n",
-       "  'predicted': '栃木県は県庁所在地の宇都宮市で、県の北部に宇都宮公園があり観光地や保養地がたくさんあるよ。'},\n",
+       "  'predicted': '栃木県は県の北部に宇都宮市や那須高原があるよ。県南には日光や鬼怒川があるんだ。観光地の日光は、日光市、鬼室耶姫公園や日光東照宮、華厳の滝があるんだよ。'},\n",
        " {'text': 'オフラインゲームとしてのウイニングイレブンシリーズとは別に、モードを限定したアイテム課金制の配信ゲーム『myClub（マイクラブ）』(2015 - 2016)、『Lite』(2017 - 2021)が存在し、仕様の異なったオンライン専用ゲームとなっていた。シリーズの累計本数は、2022年時点で1億1,250万本以上を達成している[4]。',\n",
        "  'target': 'オフラインゲームとしてのウイニングイレブンとは別に、モードを限定したアイテム課金制の配信ゲーム『myClub』(2015 - 2016)、『Lite』(2017 - 2021)があって、仕様の違ったオンライン専用ゲームとなってたんだ。シリーズの累計本数は、2022年時点で1億1,250万本以上を達成しているよ。',\n",
-       "  'predicted': 'オンラインレースゲーム「MyClidathon」とは別にモード限定のアイテム課金型配信ゲームがあるよ。シリーズ累計は1兆1千万以上だよ。\\nシリーズの本数は2022年で1憶1250万本を突破しているよ。。'},\n",
+       "  'predicted': 'ウイイレシリーズとは別にモードが限定されたアイテム課金の配信ゲーム「myclub」、「LITE」があり、シリーズ累計は2022年で1兆1千万以上になったよ。\\nシリーズの通算は1憶1250万以上に達しているんだ。'},\n",
        " {'text': '岡山県（おかやまけん）は、日本の中国地方に位置する県。県庁所在地は岡山市。',\n",
        "  'target': '岡山県は、日本の中国地方に位置する県で県庁所在地は岡山市だよ。',\n",
-       "  'predicted': '岡山県は、「おかやま」と読むよ。日本の中部地方に位置し、県庁所在地は大津市で、面積は3,779km2だよ。'},\n",
+       "  'predicted': '岡山県は県の北部にある県で県庁所在地が岡山市だよ。'},\n",
        " {'text': \"チップとデールのツリーハウス (Chip'n Dale's Treehouse) は、ディズニーキャラクターチップとデールのオーク（日本語訳樫）の木の家をモチーフにした散策型アトラクション。同種のアトラクション「スイスファミリー・ツリーハウス」と比較して小さめで、年少者を主な対象としている。当初は滑り台ができていたが、滑るほうを逆に登る子供が絶えず、安全のため両方とも階段に改修された。\",\n",
        "  'target': 'チップとデールのツリーハウス は、ディズニーキャラクターチップとデールのオークの木の家をモチーフにした散策型アトラクションだよ。同種のアトラクション「スイスファミリー・ツリーハウス」と比べて小さめで、年少者を主なターゲットとしている。当初は滑り台ができていたが、滑るほうを逆に登る子供がたくさんいて、安全のため両方とも階段になったんだ。',\n",
-       "  'predicted': 'チップンとデールのツリーハウスは、チップン、デールが作ったツリーのハウスをモチーフにしたアトラクションだよ。 同種のものと比べて小さいので、年少者を対象としてるんだ。 最初は滑り台で、後から登る子供が多くて、安全にするため、両方とも滑れる階段に変わったんだよ。'},\n",
+       "  'predicted': 'チップ、デールの家は、ディズニー・キャラクターチップス・デールとオークの木の家で、ツリーと一緒の散策型のアトラクションテーマはチップとオデール、デールはオークのツリーハットとオークの家だよ。小さいサイズで、年長者を対象にしているんだ。最初は滑り台で、それから登って、両方階段で登ることができるよ。安全のために、両方とも同じ階段にしたんだ!'},\n",
        " {'text': \"ピノキオの冒険旅行(Pinocchio's Daring Journey)は、ディズニー映画『ピノキオ』をモチーフにしたライド型アトラクション。トロッコ型のライドに乗って同作の物語をたどる[1]。 このアトラクションは、東京ディズニーランド開園時に世界で初めて開設され、その1ヵ月後の1983年5月15日にカリフォルニアのディズニーランドにも開設された。アナハイム版、パリ版は、さらにそれらに基づいて導入されたものである。 小型のライドは4人ないし6人乗りで、地面に設置されたレールの上を走っていく。ピノキオの物語に沿って場面が変わっていき、最後にはピノキオを人間にしてくれるブルー・フェアリーに出会う。\",\n",
        "  'target': 'ピノキオの冒険旅行は、ディズニー映画『ピノキオ』をモチーフにしたライド型アトラクションだよ。トロッコ型のライドに乗って同作の物語を味わえるよ。 このアトラクションは、東京ディズニーランド開園時に世界で初めて作られて、その1ヵ月後の1983年5月15日にカリフォルニアのディズニーランドにも作られたよ。アナハイム版、パリ版は、それらを元に作られたよ。 小型のライドは4人～6人乗りで、地面に設置されたレールの上を走っていき、ピノキオの物語に沿って場面が変わっていき、最後にはピノキオを人間にしてくれるブルー・フェアリーに出会うんだ。',\n",
-       "  'predicted': 'ピノッキオのふしぎなゆかいなジャーニー は、ディズニーピノキヤースドールのキャラクターを使ったライド型のアトラクションだよ。 このアトラクは、日本の東京ディズニーランドに最初に作られたよ。カリフォルニアディズニーランドには、1983年にオープンしたんだ。ディズニーリゾートにはそれに基づいて作られたんだと思うよ! \\n\\n#Answer: \\n'},\n",
+       "  'predicted': 'ディズニー映画の『ぴきぴきち君の冒険』をテーマにしたライド型で、トロコ型の乗り物で『リトル・マーメイド』の物語を辿るよ。このアトラクションは東京ディズニーランドに最初に作られ、その後、カリフォルニアに、アナハイムは、ディズニーランドにそれぞれ設置されたんだ。 \\n\\n★ Respin: \\n \\n ### Respoin## ## responath \\n Res####:##'},\n",
        " {'text': 'メインストリートUSA内（東京ではワールドバザールのプラザ内）を走る乗り合い自動車。エリアが再現している時代設定と同じく、20世紀初頭アメリカに走っていた自動車、もしくは馬車をモチーフとしている。',\n",
        "  'target': 'メインストリートUSA内（東京ではワールドバザールのプラザ内）を走る乗り合い自動車で、エリアが再現している時代設定と同じで、20世紀初頭アメリカに走っていた自動車、もしくは馬車をモチーフとしているよ。',\n",
-       "  'predicted': '「ヴィレッジ・グリーティングドライブ」は、エリア内にある乗り合いで動く自動車だよ。時代設定が20世紀末のアメリカに走っていて、そのアメリカにあるエリアを再現しているよ。'},\n",
+       "  'predicted': 'ライド・ザ・シティは、アメリカの20世紀初頭に走ってた自動車や馬車の乗り物だよ。時代設定が20世紀末で、現代から20世紀のアメリカになってるところがポイントだよ'},\n",
        " {'text': '長野県（ながのけん）は、日本の中部地方に位置する県。県庁所在地は長野市。\\n令制国名の信濃国にちなみ、信州とも呼ばれている。海に面していない内陸県であり、日本アルプスを始め大規模な山岳地があるため可住地面積率は低い。キャッチフレーズはしあわせ信州[2]。',\n",
        "  'target': '長野県は、日本の中部地方に位置する県で県庁所在地は長野市だよ。\\n令制国名の信濃国に関係していて、信州とも呼ばれているよ。海に面していない内陸県で、日本アルプスを始め大規模な山岳地があるため可住地面積率は低いんだ。キャッチフレーズはしあわせ信州。',\n",
-       "  'predicted': '長野県は日本での中南地方にある県で県庁所在地で、県庁のある所は海がない内陸県で、信州のよだよと言われているよ。'},\n",
+       "  'predicted': '長野県は中部地方にあって、県庁所在地が長野市だよ。令制の信濃国にちなみ信州と呼ばれているんだ。海はなくて、内陸県で、信州のよさをPRするために、しあわせ信州というキャッチフレーズがあるんだわ。'},\n",
        " {'text': 'オーディオアニマトロニクスで動く鳥や花、壁の木彫り人形たちが音楽に合わせて歌うショー形式のアトラクション。\\nパーク毎ならびに、過去に変更を経たいくつかのバージョンが存在する。',\n",
        "  'target': 'オーディオアニマトロニクスで動く鳥や花、壁の木彫り人形たちが音楽に合わせて歌うショー形式のアトラクションだよ。\\n過去に変更をした何個かののバージョンが存在する。',\n",
-       "  'predicted': 'ディズニーランドの「ミッキーのフィルハーマジック」は、ミッキーマウスがフィルハーモニア管弦楽団を指揮して、ディズニーの仲間たちと音楽を演奏するショーだよ。'}]"
+       "  'predicted': 'ディズニーシーでは、ディズニーのキャラクター達が音楽に乗って歌ったり踊ったりするショーだよ。'}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,9 +345,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:0 for open-end generation.\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -403,9 +411,20 @@
       "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
       "Setting `pad_token_id` to `eos_token_id`:0 for open-end generation.\n",
       "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:0 for open-end generation.\n",
-      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:0 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:0 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: no <eos> detected ignoring output\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
       "Setting `pad_token_id` to `eos_token_id`:0 for open-end generation.\n",
       "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
