update tanase: make_dataset_tokenized_simple.py added

--- a/tanase/make_data.ipynb
+++ b/tanase/make_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,20 +128,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all = pd.concat(dfs, ignore_index=True)"
+    "df_all = pd.concat(dfs, ignore_index=True)\n",
+    "df_all.to_excel('data_all.xlsx', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all.to_excel('data_all.xlsx', index=False)"
+    "# 被験者IDが *-6 のデータを抽出\n",
+    "df_A6 = df_all[df_all['被験者ID'].str.endswith('-6')]\n",
+    "# df_A6 以外のデータを抽出\n",
+    "df_others = df_all[~df_all['被験者ID'].str.endswith('-6')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_A6.to_excel('valid.xlsx', index=False)\n",
+    "df_others.to_excel('train.xlsx', index=False)"
    ]
   }
  ],
